--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #121212;
     color: #ffa500;
-    font-family: Arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     text-align: center;
 }
 
