--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,16 @@ h1 {
     width: 80%;
 }
 
+.project-images {
+    margin: 20px 0;
+}
+
+.project-images img {
+    max-width: 100%;
+    margin: 10px;
+    border-radius: 8px;
+}
+
 .btn {
     display: inline-block;
     margin: 10px;
