--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,10 @@
 <footer class="footer">
   <div class="social-links">
-    <a href="https://twitter.com" target="_blank" class="social-icon">Twitter</a>
-    <a href="https://facebook.com" target="_blank" class="social-icon">Facebook</a>
-    <a href="https://github.com" target="_blank" class="social-icon">GitHub</a>
+    <a href="https://t.me/astatsprojects" target="_blank" class="social-icon telegram-button">
+      <i class="fab fa-telegram"></i> Twitter
+    </a>
   </div>
 </footer>
+
+<!-- Подключение FontAwesome для иконок -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
