--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="social-links">
     <a href="https://t.me/astatsprojects" target="_blank" class="social-icon telegram-button">
-      <i class="fab fa-telegram"></i> Twitter
+      <i class="fab fa-telegram"></i>
     </a>
   </div>
 </footer>
