--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,3 +53,29 @@ h1 {
 .btn:hover {
     background-color: #ff8c00;
 }
+
+.social-links {
+  display: flex;
+  gap: 15px;
+}
+
+.social-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  background-color: #333;
+  color: white;
+  border-radius: 50%;
+  font-size: 24px;
+  transition: background-color 0.3s;
+}
+
+.social-icon:hover {
+  background-color: #ff4500; /* Оранжевый цвет для hover */
+}
+
+.social-icon i {
+  margin: 0;
+}
+
