--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,6 +54,11 @@ h1 {
     background-color: #ff8c00;
 }
 
+a {
+  text-decoration: none;
+  color: #ffa500;
+}
+
 .social-links {
   display: flex;
   gap: 15px;
@@ -64,8 +69,7 @@ h1 {
   align-items: center;
   justify-content: center;
   padding: 15px;
-  background-color: #333;
-  color: white;
+  color: #ffa500;
   border-radius: 50%;
   font-size: 24px;
   transition: background-color 0.3s;
@@ -78,4 +82,3 @@ h1 {
 .social-icon i {
   margin: 0;
 }
-
