--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="social-links">
-    <a href="https://t.me/astatsprojects" target="_blank" class="social-icon telegram-button">
-      <i class="fab fa-telegram"></i>
-    </a>
+    <button class="social-icon telegram-button" onclick="window.open('https://t.me/astatsprojects', '_blank')">
+      <i class="fab fa-telegram"></i> <!-- text -->
+    </button>
   </div>
 </footer>
 
