--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,8 +8,8 @@ body {
 hr {
     border: none;
     height: 2px;
-    background-color: rgba(255, 165, 0, 0.5); /* 50% прозрачности */
-    margin: 20px 0; /* Отступы сверху и снизу */
+    background: linear-gradient(to right, rgba(255, 165, 0, 0), rgba(255, 165, 0, 0.5), rgba(255, 165, 0, 0)); 
+    margin: 20px 0;
 }
 
 header {
@@ -88,5 +88,5 @@ h1 {
 }
 
 .social-icon i {
-  margin-right: 8px;
+  margin-right: 0px;
 }
