--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 .project-description {
-    margin: 0 20px;
+    margin: 0 20%;
 }
 
 .projects {
@@ -76,12 +76,12 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 10px 20px;
-  background-color: #333;
+  padding: 10px 10px;
+  background-color: #ffa500;
   color: white;
   border-radius: 5px;
   border: none; /* Убираем обводку у кнопки */
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
