--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,7 @@ h1 {
     color: #121212;
     text-decoration: none;
     border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 .btn:hover {
