--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,14 @@ hr {
     border: none;
     height: 2px;
     background: linear-gradient(to right, rgba(255, 165, 0, 0), rgba(255, 165, 0, 0.5), rgba(255, 165, 0, 0)); 
-    margin: 20px 0;
+    margin: 7% 0;
+}
+
+.small-hr {
+    border: none;
+    height: 2px;
+    background: linear-gradient(to right, rgba(255, 165, 0, 0), rgba(255, 165, 0, 0.5), rgba(255, 165, 0, 0)); 
+    margin: 7% 70%;
 }
 
 header {
