--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,14 +48,28 @@ h1 {
     width: 80%;
 }
 
-.project-images {
-    margin: 20px 0;
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  margin: 20px;
 }
 
-.project-images img {
-    max-width: 100%;
-    margin: 10px;
-    border-radius: 8px;
+.gallery figure {
+  margin: 0;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 8px;
+}
+
+.gallery figcaption {
+  text-align: center;
+  padding: 5px;
+  color: #ffa500;
 }
 
 .btn {
