--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,7 +52,7 @@ h1 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px;
-    margin: 20px;
+    margin: 0 25%;
 }
 .gallery img {
     width: 100%;
