--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,6 +54,7 @@ h1 {
     gap: 10px;
     margin: 0 25%;
 }
+
 .gallery img {
     width: 100%;
     height: auto;
@@ -61,6 +62,7 @@ h1 {
     border-radius: 5px;
     transition: transform 0.3s;
 }
+
 .gallery img:hover {
     transform: scale(1.05);
 }
@@ -76,17 +78,19 @@ h1 {
     overflow: auto;
     background-color: rgba(0,0,0,0.9);
 }
+
 .modal-content {
-    margin: auto;
+    margin: 2% auto;
     display: block;
     max-width: 90%;
     max-height: 90%;
 }
+
 .close {
     position: absolute;
     top: 20px;
     right: 35px;
-    color: #fff;
+    color: #ffa500;
     font-size: 40px;
     font-weight: bold;
     cursor: pointer;
