--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,9 @@
     <button class="social-icon telegram-button" onclick="window.open('https://t.me/astatsprojects', '_blank')">
       <i class="fab fa-telegram"></i><!-- text -->
     </button>
+    <button class="social-icon discord-button" onclick="window.open('https://discord.gg/xqPkDRsfES', '_blank')">
+      <i class="fab fa-discord"></i><!-- text -->
+    </button>
   </div>
 </footer>
 
