--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,6 +58,7 @@ h1 {
 .gallery img {
     width: 100%;
     height: 90%;
+    object-fit: cover;
     cursor: pointer;
     border-radius: 5%;
     transition: transform 0.3s;
